--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-174.8KB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇭🇰 香港-2.46MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: 120.233.151.171, port: 8020, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-443.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇸🇬 新加坡-392.0KB/s(Youtube:不良林), server: sg1.xz88.ml, port: 12464, type: vmess, uuid: 09a62e54-0f74-4002-8d45-5fe63e4bf2a2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 未知国家-2.17MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 未知国家-3.38MB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
-  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
+  - {name: 🇨🇳 中国-305.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.58MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 (已存活1天)中国-1.69MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-394.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 未知国家-1.61MB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
   - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: 173.82.205.212, port: 18088, type: vmess, uuid: 727b39a8-a8b7-11ec-8f28-f9224e8647f5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /DBTQ0rzf/, ws-headers: {Host: 173.82.205.212}}
+  - {name: 未知国家-2.11MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
-      - 未知国家-2.17MB/s(Youtube:不良林)
-      - 未知国家-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.0KB/s(Youtube:不良林)
+      - 未知国家-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
-      - 未知国家-2.17MB/s(Youtube:不良林)
-      - 未知国家-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.0KB/s(Youtube:不良林)
+      - 未知国家-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,21 +53,19 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
-      - 未知国家-2.17MB/s(Youtube:不良林)
-      - 未知国家-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.0KB/s(Youtube:不良林)
+      - 未知国家-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -75,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
-      - 未知国家-2.17MB/s(Youtube:不良林)
-      - 未知国家-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.0KB/s(Youtube:不良林)
+      - 未知国家-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
-      - 未知国家-2.17MB/s(Youtube:不良林)
-      - 未知国家-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.0KB/s(Youtube:不良林)
+      - 未知国家-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -106,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
-      - 未知国家-2.17MB/s(Youtube:不良林)
-      - 未知国家-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.0KB/s(Youtube:不良林)
+      - 未知国家-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
-      - 未知国家-2.17MB/s(Youtube:不良林)
-      - 未知国家-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-394.0KB/s(Youtube:不良林)
+      - 未知国家-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
