--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 未知国家-495.7KB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
-  - {name: 🇷🇺 俄罗斯联邦-3.15MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇨🇳 中国-505.5KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8010, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇳 中国-357.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-360.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-273.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 未知国家-2.11MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 未知国家-2.17MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-245.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇨🇦 加拿大-5.58MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-5.34MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-495.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.6KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.34MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 未知国家-495.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.6KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.34MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-495.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.6KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.34MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 未知国家-495.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.6KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.34MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 未知国家-495.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.6KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.34MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-495.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.6KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.34MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-495.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-273.6KB/s(Youtube:不良林)
+      - 未知国家-2.11MB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-5.34MB/s(Youtube:不良林)
